ali ghodsi lecture notes

--- a/latex/tubsartcl_example.tex
+++ b/latex/tubsartcl_example.tex
@@ -11,7 +11,7 @@
   ]{tubsartcl}
 \usepackage[utf8x]{inputenc}
 
-\usepackage[ngerman]{babel}
+\usepackage[english]{babel}
 
 \usepackage{lipsum} % Blindtext-Paket
 
@@ -19,7 +19,7 @@
 \title{Recurrent Neural Networks and Long Short-Term Memory}
 \subtitle{Seminar: Deep Learning for Molecular Biology}
 \author{Hendrik Bohne, Jakob Mees}
-\logo{\includegraphics{logo-hzi-footer.png}}
+\logo{\includegraphics{HZI_Logo.pdf}}
 
 
 \begin{document}
